syntax = "proto3";

//version 200315

package members.proto;

message DeviceInfo {
    string name = 1;
    string os = 2;
    string app = 3;
    string app_version = 4;
}

message SuggestBook {
    string name = 1;
    string book = 2;
    string comment = 3;
    DeviceInfo device = 4;
}

message TestRequest {
    int32 code = 1;
}

message TestResponse {
    int32 code = 1;
}


message SuggestResponse {
    int32 code = 1;
}

service MemberService {
    rpc test(TestRequest) returns (TestResponse) {}
    rpc suggestBooks(SuggestBook) returns (SuggestResponse){}
}



